update text indicator with a wrapper that has no width to prevent indicator getting wrapped onto its own line

--- a/rb/static/widget-new/src/css/text-indicator-widget.css
+++ b/rb/static/widget-new/src/css/text-indicator-widget.css
@@ -1,14 +1,22 @@
-
 .antenna-text-indicator-widget {
-    display: inline-block;
-    padding-left: 5px;
+    /* The outer element is set to display inline and position relative so that it takes up no space on the line.
+       Otherwise, the indicator often ends up being wrapped onto its own line at the end of the text. */
+    display: inline;
+    position: relative;
     cursor: pointer;
     opacity: 0;
     transition: opacity 300ms ease;
     line-height: 1em;
-    vertical-align: top;
-    white-space: nowrap;
     font-size: 100%; /* Size the text indicator to match the page text. */
+}
+
+.antenna-text-indicator-inner {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 5px;
+    white-space: nowrap;
 }
 
 .antenna-text-indicator-widget.antenna-notloaded {
